# mobaw2025

./: README.md
Architecture_Demo/: sbs-guide.md
Architecture_Demo/backend-api/: .gitignore  Dockerfile  main.py  pyproject.toml
Architecture_Demo/mobile-app/crew-starter/: App.tsx  app.json  package-lock.json  package.json
FrogFacts/: app.json  package-lock.json  package.json
FrogFacts/app/: _layout.tsx
FrogFacts/app/(tabs)/: _layout.tsx  facts.tsx  index.tsx
FrogFacts/app/frog/[id]/: index.tsx  why.tsx
FrogFacts/context/: FrogContext.tsx
hmstore/: package.json
hmstore/components/: Content.tsx  Footer.tsx  Menu.tsx  ProductFilter.tsx  ProductList.tsx
hmstore_2/hmstore/: package-lock.json
hmstore_2/hmstore/app/: globals.css  layout.tsx  page.tsx
hmstore_2/hmstore/components/: Content.tsx  Header.tsx  ProductCard.tsx  ProductFilter.tsx  ProductList.tsx
hmstore_2/hmstore/model/: Product.ts
hmstore_2/hmstore/services/: ProductService.ts
product_catalog_static/: index.html  scripts.js  styles.css
